rsnapshot changelog
http://www.rsnapshot.org/
------------------------------------------------------------------------------

VERSION 1.0.9
------------------------------------------------------------------------------
- Added backup_mysql.sh example script in utils/ to backup a MySQL database
- Added backup_smb_share.sh example script in utils/ to backup an SMB share

VERSION 1.0.8 (Dec 26 12:56 2003)
------------------------------------------------------------------------------
- Added backup_script option to have rsnapshot invoke backup scripts directly
- Added two example backup scripts in the utils/ directory, one for Postgres,
  and one for downloading the CVS root for rsnapshot
- Added optional syslog support using the "logger" command
- Fixed ssh_args local override for individual backup points
- Added additional comments to various sections of the code
- Removed redundant rsync arguments from the default
- Moved add_lockfile() call so it runs later in the program

VERSION 1.0.7 (Dec 19 19:22 2003)
------------------------------------------------------------------------------
- Added ssh_args parameter to pass arbitrary args to ssh
- Fully integrated Autoconf build support for the program and config file
- Provided more helpful error messages when the config file is not found
- Fixed false "Can not remove lockfile" error when cmd_ssh is not defined
  but is referenced later in backup points

VERSION 1.0.6 (Nov 26 21:03 2003)
------------------------------------------------------------------------------
- added \n to utime() debug message
- moved all rsync calls into dynamically populated arrays
- added rsync_short_args and rsync_long_args to config file
- improved parse_backup_opts() validation code
- Fixed "make install" vs. INSTALL bug for Mac OS X
- Ted Zlatanov <tzz@lifelogs.com> added Autoconf support!

VERSION 1.0.5 (Nov 14 00:22 2003)
------------------------------------------------------------------------------
- Changed domain to rsnapshot.org